# tower-rate-tier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: middleware.rs
docs/: ROADMAP.md
docs/roadmap/design/: 2026-03-11-tower-rate-tier-design.md
docs/roadmap/implementation/: 00-implementation-plan.md
examples/: axum_basic.rs  axum_jwt.rs
src/: buffered.rs  check.rs  clock.rs  cost.rs  gc.rs  gcra.rs  identifier.rs  layer.rs  lib.rs  on_missing.rs  on_storage_error.rs  quota.rs  response.rs  service.rs  tier.rs
src/storage/: memory.rs  mod.rs
tests/: buffered_tests.rs  cost_tests.rs  gcra_tests.rs  identifier_tests.rs  integration.rs  quota_tests.rs  storage_tests.rs  tier_tests.rs
